syntax = "proto3";

package com.metrocarpool.events;

// Optionally define the Java package
option java_multiple_files = true;
option java_package = "com.metrocarpool.contracts.proto";
option java_outer_classname = "DriverLocationEventMessage";

// The Kafka event definition
message DriverLocationEvent {
  int64 driverId = 1;
  string oldStation = 2;
  string nextStation = 3;
  int32 timeToNextStation = 4;
  int32 availableSeats = 5;
  string finalDestination = 6;
  string messageId = 7;
}
