syntax = "proto3";

package com.metrocarpool.events;

import "google/protobuf/timestamp.proto";

// Optionally define the Java package
option java_multiple_files = true;
option java_package = "com.metrocarpool.contracts.proto";
option java_outer_classname = "RiderRequestDriverEventMessage";

// The Kafka event definition
message RiderRequestDriverEvent {
  int64 riderId = 1;
  string pickUpStation = 2;
  google.protobuf.Timestamp arrivalTime = 3;
  string destinationPlace = 4;
}
